_includes/css/agency.css
/* ... */
/*header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
   *//* background-image: url(../img/header-bg.png);*//*
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}*/

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

.dev_maisa{
float: left;
position: relative;
width: 100px;
margin-top: -60px;
margin-left: 200px;
}
.youtube_img img{
width: 90%;
}
.we_build{
    font-size: 2em;
    color: #3b4854;
    font-family: -webkit-body;
    font-weight: bold;
}

.play_icon {
display: block;
width: 3.1875em;
height: 3.1875em;
margin: 0 auto 2.5em;
transition: -webkit-transform .3s ease;
transition: transform .3s ease;
}

.maininfo_sub_text{
font-size: 2em;
font-family: "Open Sans", sans-serif;
max-width: 26em;
margin: 0 auto 1em;
font-weight: 300;
color: #000;
line-height: 40px;
}

.get_in_btn {
display: block;
font-size: 25px;
width: 9em;
padding: .75em 1em;
margin: .5em auto 0;
color: #c52128;
border: 2px solid #c52128;
border-radius: 4em;
transition: color .3s ease, background .3s ease;
}

.get_in_btn:hover {
display: block;
font-size: 25px;
width: 9em;
padding: .75em 1em;
margin: .5em auto 0;
color: #fff;
background: #c52128;
border: 2px solid #c52128;
border-radius: 4em;
transition: color .3s ease, background .3s ease;
}

.we_off {
    float: left;
    width: 100%;
}
.we_off h3 {
    font-size: 1.5em;
    color: #3b4854;
    margin-left: 94px;
    margin-top: 32px;
    font-family: -webkit-body;
    font-weight: bold;
    text-align: center;
}
@media(min-width:768px) {
    header .intro-text {
        padding-top: 110px;
        padding-bottom: 100px;
    }

    header .intro-text .intro-lead-in {
        margin-bottom: 25px;
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 40px;
        font-style: italic;
        line-height: 40px;
    }

    header .intro-text .intro-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

section {
    padding: 100px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 40px;
    color: #C52128;
}

section h3.section-subheading {
    margin-bottom: 30px;
    margin-top: 5px;
    text-transform: none;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}

/*section h3.section-subheading:before, h3.section-subheading:after  {
  content: "";
  width: 60px;
  height: 6px;
  border-top: 1px solid white;
  display: inline-block;
  margin: 0 10px;
}*/

@media(min-width:768px) {
    section {
        padding: 150px 0;
    }
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    background: rgba(254,209,54,.9); /* Fallback when no plugin support */
    background: rgba({{ site.color.primary | hex_to_rgb | join: ',' }}, .9);
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
    margin: 0;
}

#portfolio .portfolio-item .portfolio-caption {
    margin: 0 auto;
    padding: 25px;
    max-width: 400px;
    text-align: center;
    background-color: #fff;
}

#portfolio .portfolio-item .portfolio-caption h4 {
    margin: 0;
    text-transform: none;
}

#portfolio .portfolio-item .portfolio-caption p {
    margin: 0;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}

.timeline {
    position: relative;
    padding: 0;
    list-style: none;
}

.timeline:before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 40px;
    width: 2px;
    margin-left: -1.5px;
    background-color: #f1f1f1;
}

.timeline>li {
    position: relative;
    margin-bottom: 50px;
    min-height: 50px;
}

.timeline>li:before,
.timeline>li:after {
    content: " ";
    display: table;
}

.timeline>li:after {
    clear: both;
}

.timeline>li .timeline-panel {
    float: right;
    position: relative;
    width: 100%;
    padding: 0 20px 0 100px;
    text-align: left;
}

.timeline>li .timeline-panel:before {
    right: auto;
    left: -15px;
    border-right-width: 15px;
    border-left-width: 0;
}
/* ... */

